[package]
name = "dotinstall-macro"
description = "proc macro for dotinstall crate"
version = "0.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"
repository = "https://github.com/cameron1024/dotinstall-macro"

[lib]
proc-macro = true

[dependencies]
syn = { version = "1", features = ["proc-macro"] }
quote = "1"
proc-macro2 = "1"
